Disable the font size control when the font size prefs are not user modifiable.
In chrome://settings, the "Font size" <select> control actually sets two
preferences: the default font size and the default fixed font size. This commit
disables the element when either of those prefs is not user modifiable.

BUG=165114

Review URL: https://chromiumcodereview.appspot.com/14672012

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201528 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/options/browser_options.html
+++ b/resources/options/browser_options.html
@@ -438,6 +438,8 @@
             </option>
           </select>
         </label>
+        <span id="font-size-indicator"
+            class="controlled-setting-indicator"></span>
         <button id="fontSettingsCustomizeFontsButton"
             i18n-content="fontSettingsCustomizeFontsButton"></button>
       </div>
