--- a/resources/file_manager/main_new_ui.html
+++ b/resources/file_manager/main_new_ui.html
@@ -259,16 +259,14 @@
             <input id="search-box" type="search" tabindex="9"
                    i18n-values="aria-label:SEARCH_TEXT_LABEL">
           </div>
-          <div class="decoration-buttons-wrapper">
-            <div class="right buttonbar">
-              <button class="menubutton" id="gear-button" tabindex="10"
-                      menu="#gear-menu">
-              </button>
-              <button id="maximize-button" visibleif="full-page" tabindex="-1">
-              </button>
-              <button id="close-button" visibleif="full-page" tabindex="-1">
-              </button>
-            </div>
+          <div class="buttonbar">
+            <button class="menubutton" id="gear-button" tabindex="10"
+                    menu="#gear-menu">
+            </button>
+            <button id="maximize-button" visibleif="full-page" tabindex="-1">
+            </button>
+            <button id="close-button" visibleif="full-page" tabindex="-1">
+            </button>
           </div>
         </div>
         <div class=dialog-body>
